Finished Task model
Finsihed the basis for the Task model. The timeframe is can be extended in the future

--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -178,8 +178,7 @@
     <Compile Include="Models\DomainModels\Priority.cs" />
     <Compile Include="Models\DomainModels\Task.cs" />
     <Compile Include="Models\DomainModels\Thought.cs" />
-    <Compile Include="Models\DomainModels\Due.cs" />
-    <Compile Include="Models\DomainModels\TimeFrame.cs" />
+    <Compile Include="Models\DomainModels\Timeframe.cs" />
     <Compile Include="Models\DomainModels\TimeFrameType.cs" />
     <Compile Include="Models\DomainModels\User.cs" />
     <Compile Include="NHibernate\INHUnitOfWork.cs" />
