--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Extension\DateTimeExtensions.cs" />
     <Compile Include="Infrastructure\Helpers\HtmlHelpers.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\HabitGoal.cs" />
     <Compile Include="Models\DomainModels\Projects\Entity\Project.cs" />
@@ -182,7 +183,9 @@
     <Compile Include="Models\DomainModels\Projects\Spec\ProjectRootSpec.cs" />
     <Compile Include="Models\DomainModels\Tasks\Spec\TaskOnDaySpec.cs" />
     <Compile Include="NHibernate\NHRepositoryOfEntity.cs" />
+    <Compile Include="Repository\Core\ExpressionSpecification.cs" />
     <Compile Include="Repository\Core\ExpressionSpecificationBase.cs" />
+    <Compile Include="Repository\Core\ExpressionSpecificationExtensions.cs" />
     <Compile Include="Repository\Core\IDomainEntity.cs" />
     <Compile Include="Repository\Core\IExpressionSpecification.cs" />
     <Compile Include="Repository\Core\ISpecification.cs" />
@@ -219,9 +222,8 @@
     <Compile Include="Repository\Thoughts\ThoughtRepository.cs" />
     <Compile Include="Repository\UserMap.cs" />
     <Compile Include="Service\Habits\HabitDtoMap.cs" />
-    <Compile Include="Service\PlanWeek\Dto\DayPlanDto.cs" />
-    <Compile Include="Service\PlanWeek\Dto\DayPlanItemDto.cs" />
-    <Compile Include="Service\PlanWeek\Dto\WeekPlanDto.cs" />
+    <Compile Include="Service\PlanWeek\Dto\ItemListDto.cs" />
+    <Compile Include="Service\PlanWeek\Dto\ItemDto.cs" />
     <Compile Include="Service\PlanWeek\IPlanWeekService.cs" />
     <Compile Include="Service\PlanWeek\PlanWeekService.cs" />
     <Compile Include="Service\Projects\Dto\ProjectDto.cs" />
@@ -262,6 +264,7 @@
     <Content Include="Content\hack-extended.min.css" />
     <Content Include="Content\hack.css" />
     <Content Include="Content\hack.min.css" />
+    <Content Include="CSS\Controllers\PlanWeek.css" />
     <Content Include="CSS\Controllers\Thoughts.css" />
     <Content Include="CSS\Global\bootstrap.css" />
     <Content Include="CSS\Global\content.css" />
