--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -324,6 +324,8 @@
     </Content>
     <Content Include="JavaScript\Framework\jquery-ui-1.12.1.js" />
     <Content Include="JavaScript\Framework\jquery-ui-1.12.1.min.js" />
+    <Content Include="scripts\jquery.nicescroll.js" />
+    <Content Include="scripts\jquery.nicescroll.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
