--- a/Tasks/packages.config
+++ b/Tasks/packages.config
@@ -30,6 +30,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
+  <package id="nuget-bot.jquery.nicescroll.js" version="3.4.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
