--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -179,12 +179,17 @@
     <Compile Include="Infrastructure\Extension\DateTimeExtensions.cs" />
     <Compile Include="Infrastructure\Helpers\HtmlHelpers.cs" />
     <Compile Include="Models\DomainModels\Enum\AsideTabType.cs" />
-    <Compile Include="Models\DomainModels\Enum\TaskType.cs" />
-    <Compile Include="Models\DomainModels\Habits\Entity\HabitGoal.cs" />
+    <Compile Include="Models\DomainModels\Enum\HabitEndOnType.cs" />
+    <Compile Include="Models\DomainModels\Enum\ItemType.cs" />
+    <Compile Include="Models\DomainModels\Habits\Entity\HabitList.cs" />
+    <Compile Include="Models\DomainModels\Habits\Spec\ProjectHabits.cs" />
     <Compile Include="Models\DomainModels\Projects\Entity\Project.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\Habit.cs" />
+    <Compile Include="Models\DomainModels\Projects\Entity\ProjectNode.cs" />
+    <Compile Include="Models\DomainModels\Projects\Entity\ProjectTree.cs" />
     <Compile Include="Models\DomainModels\Projects\Spec\ProjectChildrenSpec.cs" />
     <Compile Include="Models\DomainModels\Projects\Spec\ProjectRootSpec.cs" />
+    <Compile Include="Models\DomainModels\Tasks\Spec\ProjectTasksSpec.cs" />
     <Compile Include="Models\DomainModels\Tasks\Spec\TaskOnDaySpec.cs" />
     <Compile Include="NHibernate\NHRepositoryOfEntity.cs" />
     <Compile Include="Repository\Core\ExpressionSpecification.cs" />
@@ -196,7 +201,6 @@
     <Compile Include="Repository\Core\ISpecificationRepository.cs" />
     <Compile Include="Repository\Core\IUnitOfWork.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\HabitException.cs" />
-    <Compile Include="Models\DomainModels\Habits\Entity\HabitList.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\HabitRecurrence.cs" />
     <Compile Include="Models\DomainModels\Priority.cs" />
     <Compile Include="Models\DomainModels\Tasks\Entity\Task.cs" />
@@ -212,13 +216,15 @@
     <Compile Include="NHibernate\WindsorControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Core\DataAccess.cs" />
-    <Compile Include="Repository\Habits\HabitGoalMap.cs" />
+    <Compile Include="Repository\Habits\HabitExceptionMap.cs" />
+    <Compile Include="Repository\Projects\IProjectRepository.cs" />
     <Compile Include="Repository\Projects\ProjectMap.cs" />
     <Compile Include="Repository\Habits\HabitMap.cs" />
     <Compile Include="Repository\Habits\HabitRecurrenceMap.cs" />
     <Compile Include="Repository\Habits\HabitRepository.cs" />
     <Compile Include="Repository\Habits\IHabitRepository.cs" />
     <Compile Include="Repository\PriorityMap.cs" />
+    <Compile Include="Repository\Projects\ProjectRepository.cs" />
     <Compile Include="Repository\SqlBase.cs" />
     <Compile Include="Repository\TaskMap.cs" />
     <Compile Include="Repository\Thoughts\IThoughtRepository.cs" />
@@ -236,7 +242,9 @@
     <Compile Include="Service\PlanWeek\IPlanWeekService.cs" />
     <Compile Include="Service\PlanWeek\PlanWeekService.cs" />
     <Compile Include="Service\Projects\Dto\ProjectDto.cs" />
+    <Compile Include="Service\Projects\Dto\ProjectWithItemsDto.cs" />
     <Compile Include="Service\Projects\Dto\ProjectItemDto.cs" />
+    <Compile Include="Service\Projects\ProjectDtoMap.cs" />
     <Compile Include="Service\Projects\ProjectService.cs" />
     <Compile Include="Service\Projects\IProjectService.cs" />
     <Compile Include="Service\Habits\Dto\HabitDto.cs" />
@@ -302,6 +310,7 @@
     <Content Include="Images\SVG\leftArrow.svg" />
     <Content Include="Images\SVG\rightArrow.svg" />
     <Content Include="JavaScript\Controllers\PlanWeek\Index.js" />
+    <Content Include="JavaScript\Controllers\Projects\Index.js" />
     <Content Include="JavaScript\Controllers\Tasks\Index.js" />
     <Content Include="JavaScript\Controllers\Thoughts\Index.js" />
     <Content Include="JavaScript\Controllers\Utils\Core.js" />
@@ -374,6 +383,7 @@
     <Content Include="Views\Habits\_EditHabit.cshtml" />
     <Content Include="Views\Projects\_AddProject.cshtml" />
     <Content Include="Views\Projects\_EditProject.cshtml" />
+    <Content Include="Views\Projects\_AddTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Base\" />
