--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -166,6 +166,7 @@
     <Compile Include="App_Start\MappingConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CalendarEventsController.cs" />
     <Compile Include="Controllers\HabitsController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\PlanWeekController.cs" />
@@ -181,14 +182,13 @@
     <Compile Include="Models\DomainModels\Enum\AsideTabType.cs" />
     <Compile Include="Models\DomainModels\Enum\HabitEndOnType.cs" />
     <Compile Include="Models\DomainModels\Enum\ItemType.cs" />
+    <Compile Include="Models\DomainModels\CalendarEvents\Entity\CalendarEvent.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\HabitList.cs" />
     <Compile Include="Models\DomainModels\Habits\Spec\ProjectHabits.cs" />
     <Compile Include="Models\DomainModels\Projects\Entity\Project.cs" />
     <Compile Include="Models\DomainModels\Habits\Entity\Habit.cs" />
     <Compile Include="Models\DomainModels\Projects\Entity\ProjectNode.cs" />
     <Compile Include="Models\DomainModels\Projects\Entity\ProjectTree.cs" />
-    <Compile Include="Models\DomainModels\Projects\Spec\ProjectChildrenSpec.cs" />
-    <Compile Include="Models\DomainModels\Projects\Spec\ProjectRootSpec.cs" />
     <Compile Include="Models\DomainModels\Tasks\Spec\ProjectTasksSpec.cs" />
     <Compile Include="Models\DomainModels\Tasks\Spec\TaskOnDaySpec.cs" />
     <Compile Include="NHibernate\NHRepositoryOfEntity.cs" />
@@ -216,6 +216,7 @@
     <Compile Include="NHibernate\WindsorControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Core\DataAccess.cs" />
+    <Compile Include="Repository\CalendarEvents\CalendarEventMap.cs" />
     <Compile Include="Repository\Habits\HabitExceptionMap.cs" />
     <Compile Include="Repository\Projects\IProjectRepository.cs" />
     <Compile Include="Repository\Projects\ProjectMap.cs" />
@@ -234,6 +235,10 @@
     <Compile Include="Service\Aside\AsideService.cs" />
     <Compile Include="Service\Aside\Dto\Tab.cs" />
     <Compile Include="Service\Aside\IAsideService.cs" />
+    <Compile Include="Service\CalendarEvents\Dto\CalendarEventDto.cs" />
+    <Compile Include="Service\CalendarEvents\CalendarEventDtoMap.cs" />
+    <Compile Include="Service\CalendarEvents\CalendarEventService.cs" />
+    <Compile Include="Service\CalendarEvents\ICalendarEventService.cs" />
     <Compile Include="Service\Habits\HabitDtoMap.cs" />
     <Compile Include="Service\PlanWeek\Dto\InWeekItemListDto.cs" />
     <Compile Include="Service\PlanWeek\Dto\ItemListDto.cs" />
@@ -263,6 +268,7 @@
     <Compile Include="Service\Users\IUserService.cs" />
     <Compile Include="Service\Users\UserDtoMap.cs" />
     <Compile Include="Service\Users\UserService.cs" />
+    <Compile Include="ViewModels\CalendarEvents\CalendarEventsViewModel.cs" />
     <Compile Include="ViewModels\Habits\HabitEditViewModel.cs" />
     <Compile Include="ViewModels\Habits\HabitsViewModel.cs" />
     <Compile Include="ViewModels\PlanWeek\PlanWeekViewModel.cs" />
@@ -384,8 +390,14 @@
     <Content Include="Views\Projects\_AddProject.cshtml" />
     <Content Include="Views\Projects\_EditProject.cshtml" />
     <Content Include="Views\Projects\_AddTask.cshtml" />
+    <Content Include="Views\Projects\_ProjectWithItems.cshtml" />
+    <Content Include="Views\CalendarEvents\Index.cshtml" />
+    <Content Include="Views\CalendarEvents\_CalendarEventsTable.cshtml" />
+    <Content Include="Views\PlanWeek\_Aside.cshtml" />
+    <Content Include="Views\CalendarEvents\_Aside.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Models\DomainModels\Projects\Spec\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\ScheduleWeek\" />
   </ItemGroup>
