--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -61,6 +61,9 @@
     <Reference Include="FluentNHibernate, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentNHibernate.2.0.3.0\lib\net40\FluentNHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="Humanizer, Version=2.2.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Humanizer.Core.2.2.0\lib\netstandard1.0\Humanizer.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.4.0.2\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
@@ -204,7 +207,7 @@
     <Compile Include="Models\DomainModels\Habits\Entity\HabitRecurrence.cs" />
     <Compile Include="Models\DomainModels\Priority.cs" />
     <Compile Include="Models\DomainModels\Tasks\Entity\Task.cs" />
-    <Compile Include="Models\DomainModels\Thought.cs" />
+    <Compile Include="Models\DomainModels\Thoughts\Entity\Thought.cs" />
     <Compile Include="Models\DomainModels\TimeFrame.cs" />
     <Compile Include="Models\DomainModels\Enum\TimeFrameType.cs" />
     <Compile Include="Models\DomainModels\User.cs" />
@@ -314,6 +317,9 @@
     <Content Include="Images\Icons\S\cup.png" />
     <Content Include="Images\Icons\XS\cup.png" />
     <Content Include="Images\SVG\calendarEvents.svg" />
+    <Content Include="Images\SVG\delete.svg">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Images\SVG\habits.svg" />
     <Content Include="Images\SVG\leftArrow.svg" />
     <Content Include="Images\SVG\planWeek.svg" />
