--- a/Tasks/Tasks.csproj
+++ b/Tasks/Tasks.csproj
@@ -227,7 +227,7 @@
     <Compile Include="Repository\PriorityMap.cs" />
     <Compile Include="Repository\Projects\ProjectRepository.cs" />
     <Compile Include="Repository\SqlBase.cs" />
-    <Compile Include="Repository\TaskMap.cs" />
+    <Compile Include="Repository\Tasks\TaskMap.cs" />
     <Compile Include="Repository\Thoughts\IThoughtRepository.cs" />
     <Compile Include="Repository\Thoughts\ThoughtMap.cs" />
     <Compile Include="Repository\Thoughts\ThoughtRepository.cs" />
@@ -273,7 +273,7 @@
     <Compile Include="ViewModels\PlanWeek\PlanWeekViewModel.cs" />
     <Compile Include="ViewModels\Projects\ProjectEditViewModel.cs" />
     <Compile Include="ViewModels\Projects\ProjectsViewModel.cs" />
-    <Compile Include="ViewModels\Tasks\TaskEditViewModel.cs" />
+    <Compile Include="ViewModels\Tasks\TaskViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TasksViewModel.cs" />
     <Compile Include="ViewModels\Thoughts\ThoughtViewModel.cs" />
     <Compile Include="ViewModels\Thoughts\ThoughtsViewModel.cs" />
@@ -389,7 +389,7 @@
     <Content Include="Views\PlanWeek\Index.cshtml" />
     <Content Include="Views\PlanWeek\_WeekItemsTable.cshtml" />
     <Content Include="Views\PlanWeek\_OpenItemsTable.cshtml" />
-    <Content Include="Views\Tasks\_EditTask.cshtml" />
+    <Content Include="Views\Tasks\_EditTaskSelect.cshtml" />
     <Content Include="Views\Tasks\_Aside.cshtml" />
     <Content Include="Views\Thoughts\_Aside.cshtml" />
     <Content Include="Views\Habits\_Aside.cshtml" />
@@ -406,6 +406,7 @@
     <Content Include="Views\CalendarEvents\_Aside.cshtml" />
     <Content Include="Views\Thoughts\_EditThought.cshtml" />
     <Content Include="Views\Thoughts\_EditThoughtSelect.cshtml" />
+    <Content Include="Views\Tasks\_EditTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\DomainModels\Projects\Spec\" />
